fix closing section mobile 7 agustus 2024

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -146,8 +146,8 @@ body {
 }
 
 .text-title h1 {
-  font-size: calc(4rem + 1vw);
-  line-height: 5rem;
+  font-size: calc(3rem + 1vw);
+  line-height: 4rem;
 }
 
 .text-title p {
